<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu_res"
        android:title="@string/title_menu"
        android:visible="true"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_walkthought"
        android:title="@string/walkthought"
        android:visible="true"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/title_favorite"
        android:visible="true"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:visible="true"
        android:showAsAction="never" />
    <item android:visible="true" android:id="@+id/action_menu_lang"
        android:titleCondensed="Areas"
        android:title="@string/language"
        android:enabled="true">
        <menu>
            <item android:id="@+id/action_lang_en" android:title="@string/english"></item>
            <item android:id="@+id/action_lang_ja" android:title="@string/japan"></item>
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:visible="true"
        android:showAsAction="never" />
</menu>